--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="wisteria">#8e44ad</color>
     <color name="clouds">#ecf0f1</color>
     <color name="midnight_blue">#141d26</color>
+    <color name="transparent">#00000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
