--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?><!-- 使用AndroidAutoLayout进行卡片适配 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:card_view="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              xmlns:card_view="http://schemas.android.com/apk/res-auto"
               android:focusable="false"
               android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:layout_margin="20dp"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card_view:cardElevation="3dp"
-        android:focusable="false">
+        android:layout_marginBottom="@dimen/bottom_margin"
+        android:layout_marginLeft="@dimen/left_margin"
+        android:layout_marginRight="@dimen/right_margin"
+        android:layout_marginTop="@dimen/top_margin"
+        android:focusable="false"
+        card_view:cardElevation="@dimen/card_elevation">
+
+        <TextView
+            android:id="@+id/card_num_tv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/text_font_size_big_60sp"
+            android:textStyle="bold"/>
 
     </android.support.v7.widget.CardView>
 
