--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="emerald">#2ecc71</color>
-    <color name="wisteria">#8e44ad</color>
-    <color name="clouds">#ecf0f1</color>
-    <color name="midnight_blue">#141d26</color>
+    <color name="green">#2ecc71</color>
+    <color name="text_color">#141d26</color>
     <color name="transparent">#00000000</color>
     <color name="white">#FFFFFF</color>
 </resources>
