--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,15 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+
+    </style>
+
+
+    <style name="customProgressBar" parent="@android:style/Widget.ProgressBar.Horizontal">
+        <item name="android:maxHeight">4.0dip</item>
+        <item name="android:indeterminateDrawable">@drawable/progress_bar_h5</item>
+        <item name="android:progressDrawable">@drawable/progress_bar_h5</item>
+        <item name="android:minHeight">4.0dip</item>
     </style>
 
 </resources>
