--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,14 +6,32 @@
               android:gravity="center_horizontal"
               android:orientation="vertical">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/green"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textColor="@color/text_color"
-        android:textSize="32sp"/>
+        android:layout_height="?attr/actionBarSize"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/green"
+            android:gravity="center_vertical|left"
+            android:paddingLeft="@dimen/left_padding"
+            android:text="@string/app_name"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/text_font_size_big_22sp"/>
+
+        <ImageView
+            android:id="@+id/about_iv"
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@drawable/github_click_bg"
+            android:padding="@dimen/normal_padding"
+            android:src="@mipmap/about_icon"/>
+
+    </LinearLayout>
+
 
     <com.gu.library.OrientedViewPager
         android:id="@+id/view_pager"
