添加关于我的界面，添加博客和github打开的webview

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="transparent">#00000000</color>
     <color name="white">#FFFFFF</color>
     <color name="gray_ef">#efefef</color>
-    <color name="progress_bar_color">#33ff3d</color>
+    <color name="progress_bar_color">#00BA9C</color>
 </resources>
