--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,41 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/white"
-              android:gravity="center_horizontal"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:orientation="horizontal">
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="?attr/actionBarSize"
+      android:orientation="horizontal"
+      >
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/green"
-            android:gravity="center_vertical|left"
-            android:paddingLeft="@dimen/left_padding"
-            android:text="@string/app_name"
-            android:textColor="@color/text_color"
-            android:textSize="@dimen/text_font_size_big_22sp"/>
-
-        <ImageView
-            android:id="@+id/about_iv"
-            android:layout_width="?attr/actionBarSize"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@drawable/github_click_bg"
-            android:padding="@dimen/normal_padding"
-            android:src="@mipmap/about_icon"/>
-
-    </LinearLayout>
-
-
-    <com.gu.library.OrientedViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:background="@color/text_color"></com.gu.library.OrientedViewPager>
+        android:layout_weight="1"
+        android:background="@color/green"
+        android:gravity="center_vertical|left"
+        android:paddingLeft="@dimen/left_padding"
+        android:text="@string/app_name"
+        android:textColor="@color/text_color"
+        android:textSize="@dimen/text_font_size_big_22sp"
+        />
+
+    <ImageView
+        android:id="@+id/about_iv"
+        android:layout_width="?attr/actionBarSize"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@drawable/github_click_bg"
+        android:padding="@dimen/normal_padding"
+        android:src="@mipmap/about_icon"
+        />
+
+  </LinearLayout>
+
+
+  <com.gu.library.OrientedViewPager
+      android:id="@+id/view_pager"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@color/text_color"
+      ></com.gu.library.OrientedViewPager>
 </LinearLayout>
